# retirement-income-planner

./: .gitignore  CLAUDE.md  README.md  SESSION_STARTER.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  vulture_whitelist.py
.claude/: settings.json
.github/workflows/: ci.yml
api/: main.py
api/models/: accounts.py  config.py  emr.py  income_plan.py  scenarios.py  tax.py  tax_years.py  total_cost.py
api/routers/: accounts.py  config.py  emr.py  income_plan.py  scenarios.py  tax.py  tax_years.py  total_cost.py
api/static/: accounts.html  emr.html  income.html  index.html  scenarios.html  tax.html
data/: config.json  ss_thresholds.json
data/aca/: aca_2025.json  aca_2026.json
data/brackets/: federal_2025.json  federal_2026.json  ohio_2025.json  ohio_2026.json
docs/: income_plan_spec.md
profile/: README.md
services/: CLAUDE.md  aca.py  accounts.py  common.py  data_loader.py  emr.py  federal_tax.py  income_plan.py  ohio_tax.py  scenarios.py  social_security.py  total_cost.py
specs/: aca.md  accounts.md  accounts_ui.md  emr.md  fastapi_emr_route.md  fastapi_tax_route.md  fastapi_total_cost_route.md  federal_tax.md  frontend_emr.md  frontend_income.md  frontend_tax.md  income_plan_spec.md  mfj_support.md  ohio_tax.md  scenarios.md  social_security.md  total_cost.md
tests/functional/: test_accounts_route.py  test_config_route.py  test_emr_route.py  test_income_plan_route.py  test_scenarios_route.py  test_tax_route.py  test_tax_years_route.py  test_total_cost_route.py
tests/scenarios/: test_federal_tax_scenario_1.py  test_ohio_tax_scenario_1.py  (+3 more)
(+9 files in other folders)
